--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Cuenta Regresiva</title>
+      <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
